--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: Check Go Version
+      - name: Run Go Test and Print Coverage
         run: go test -cover ./...
+
+      - name: Check Go Format - fail if not formatted
+        run: test -z $(go fmt ./...)
